# passive-DDNS

./: .gitignore  .gitmodules  Cargo.toml  README.md  absddns.py  cloudflareapi.py  cloudflareddns.py  hostkerapi.py  hostkerddns.py  libopenwrt.py  libother.py  libtplink.py  main.py  pddns.py  requirements.txt
.github/workflows/: build-cross.yml  build.yml
data/: config.ini.default  config.toml.default  passive-ddns.service.default  passive-ddns.timer.default
rust/: .gitignore  Cargo.toml
rust/data/: config.ini.default  config.toml.default
rust/src/: cloudflare_api.rs  configparser.rs  main.rs  openwrt.rs
src/: cloudflare_api.rs  configparser.rs  custom_target.rs  main.rs  openwrt.rs  test.rs
