[package]
name = "passive-ddns"
version = "5.0.0-alpha"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
toml = "0.5"

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
