[package]
name = "passive-ddns"
version = "6.0.0-alpha.1"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2021"

[dependencies]
env_logger = "0.11.0"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
regex = "1"
reqwest = { version = "0.12", features = [
    "blocking",
    "json",
    "cookies",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
toml = "0.8"
