[package]
name = "passive-ddns"
version = "6.0.0"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["cargo"] }
env_logger = "0.11.0"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
reqwest = { version = "0.12", features = [
    "json",
    "cookies",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tap = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
